methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: not found: value ligne2
  ligne2
  ^PatternPicture:34: error: not enough arguments for method motif2: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  motif2()
        ^PatternPicture:37: error: not enough arguments for method motif1: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  motif1()
        ^PatternPicture:41: error: not enough arguments for method motif1: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  motif1()
        ^PatternPicture:44: error: not enough arguments for method motif2: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  motif2()
        ^